# ipaspeech

./: .gitignore  Makefile  README.md
src/: Dockerfile  app.py  logging.config.yml  pyproject.toml
src/routers/: tts.py
src/routers/providers/: polly.py
src/static/: default.css
src/templates/: index.html
src/tts/: polly.py
