[tool.poetry]
name = "ipaspeech"
version = "0.1.0"
description = "IPA speech app"
authors = ["Chi Pak <cpak1981@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
boto3 = "^1.35.0"
fastapi = "^0.114.0"
jinja2 = "^3.1.4"
python = "^3.11"
python-multipart = "^0.0.9"
pyyaml = "^6.0.0"
uvicorn = "^0.30.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.0"
pydub = "^0.25.0"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
